Fix baseline grid alignment: use correct nudges from generator, collocate tokens.json with each demo

--- a/src/default/_generated-styles.scss
+++ b/src/default/_generated-styles.scss
@@ -5,16 +5,15 @@
 // Do not edit manually - changes will be overwritten
 
 // Generated from baseline nudge generator tokens
-// Last updated: 2024-01-01T00:00:00.000Z
+// Last updated: 2025-07-22T11:01:48.567Z
 
 // Override vanilla framework heading styles with baseline-aligned versions
-
 h1 {
   font-size: 2rem;
   line-height: 2.625rem;
   font-weight: 400;
-  padding-top: 0.0627rem;
-  margin-bottom: 0.3748rem;
+  padding-top: 0.16375rem;
+  margin-bottom: 0.27375rem;
   margin-top: 0;
   font-family: $font-family-base;
 }
@@ -23,8 +22,8 @@ h2 {
   font-size: 2rem;
   line-height: 2.625rem;
   font-weight: 400;
-  padding-top: 0.0627rem;
-  margin-bottom: 0.3748rem;
+  padding-top: 0.16375rem;
+  margin-bottom: 0.27375rem;
   margin-top: 0;
   font-family: $font-family-base;
 }
@@ -77,4 +76,5 @@ p {
   margin-bottom: 0.5587500000000001rem;
   margin-top: 0;
   font-family: $font-family-base;
-} 
+}
+
