--- a/src/editorial/_generated-styles.scss
+++ b/src/editorial/_generated-styles.scss
@@ -5,16 +5,15 @@
 // Do not edit manually - changes will be overwritten
 
 // Generated from baseline nudge generator tokens
-// Last updated: 2024-01-01T00:00:00.000Z
+// Last updated: 2025-07-22T11:01:01.283Z
 
 // Override vanilla framework heading styles with baseline-aligned versions
-
 h1 {
   font-size: 2.5rem;
   line-height: 3rem;
   font-weight: 400;
-  padding-top: 0.0627rem;
-  margin-bottom: 0.9373rem;
+  padding-top: 0.1125rem;
+  margin-bottom: 0.8875rem;
   margin-top: 0;
   font-family: $font-family-base;
 }
@@ -23,18 +22,18 @@ h2 {
   font-size: 2rem;
   line-height: 2.5rem;
   font-weight: 400;
-  padding-top: 0.0627rem;
-  margin-bottom: 0.9373rem;
+  padding-top: 0.03875rem;
+  margin-bottom: 0.96125rem;
   margin-top: 0;
   font-family: $font-family-base;
 }
 
 h3 {
-  font-size: 1.75rem;
+  font-size: 1.5rem;
   line-height: 2rem;
   font-weight: 400;
-  padding-top: 0.04735rem;
-  margin-bottom: 0.45265rem;
+  padding-top: 0.46917rem;
+  margin-bottom: 0.030830000000000024rem;
   margin-top: 0;
   font-family: $font-family-base;
 }
@@ -43,38 +42,39 @@ h4 {
   font-size: 1.5rem;
   line-height: 2rem;
   font-weight: 400;
-  padding-top: 0.04735rem;
-  margin-bottom: 0.45265rem;
+  padding-top: 0.46917rem;
+  margin-bottom: 0.030830000000000024rem;
   margin-top: 0;
   font-family: $font-family-base;
 }
 
 h5 {
-  font-size: 1.25rem;
+  font-size: 1rem;
   line-height: 1.5rem;
   font-weight: 400;
-  padding-top: 0.34417rem;
-  margin-bottom: 0.65583rem;
+  padding-top: 0.41rem;
+  margin-bottom: 0.5900000000000001rem;
   margin-top: 0;
   font-family: $font-family-base;
 }
 
 h6 {
-  font-size: 1.125rem;
+  font-size: 1rem;
   line-height: 1.5rem;
   font-weight: 400;
-  padding-top: 0.34417rem;
-  margin-bottom: 0.65583rem;
+  padding-top: 0.41rem;
+  margin-bottom: 0.5900000000000001rem;
   margin-top: 0;
   font-family: $font-family-base;
 }
 
 p {
-  font-size: 1.125rem;
+  font-size: 1rem;
   line-height: 2rem;
   font-weight: 400;
-  padding-top: 0.31625rem;
-  margin-bottom: 0.68375rem;
+  padding-top: 0.16rem;
+  margin-bottom: 0.84rem;
   margin-top: 0;
   font-family: $font-family-base;
-} 
+}
+
